--- a/scnr_core/Cargo.toml
+++ b/scnr_core/Cargo.toml
@@ -9,9 +9,6 @@ homepage.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# async-trait = { workspace = true }
-# async-stream = { workspace = true }
-# futures = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
@@ -26,9 +23,8 @@ globwalk = { workspace = true }
 glob = { workspace = true }
 
 bytes = { workspace = true }
-zip ={ workspace = true }
 lzma-rs = { workspace = true }
-
+zip = { workspace = true }
 tar = { workspace = true }
 flate2 = { workspace = true }
 anyhow = { workspace = true }
@@ -36,3 +32,5 @@ anyhow = { workspace = true }
 [dev-dependencies]
 pretty_env_logger = { workspace = true }
 tokio = { workspace = true }
+pretty_assertions = { workspace = true }
+test-case = { workspace = true }
