--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,21 @@ homepage = 'https://shindan.io/'
 #  ------------------------------------------------------------------------------------------------------------------
 #  ------------------------------------------------------------------------------------------------------------------
 # 
+#                                                 LINTS
+#  
+#  ------------------------------------------------------------------------------------------------------------------
+#  ------------------------------------------------------------------------------------------------------------------
+
+# Lints will work ... in the futur : https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#lints
+[lints.rust]
+unsafe_code = "forbid"
+
+[lints.clippy]
+missing_errors_doc = "allow"
+
+#  ------------------------------------------------------------------------------------------------------------------
+#  ------------------------------------------------------------------------------------------------------------------
+# 
 #                                                 WORKSPACE CRATES
 #  
 #  ------------------------------------------------------------------------------------------------------------------
