--- a/scnr_core/Cargo.toml
+++ b/scnr_core/Cargo.toml
@@ -18,6 +18,9 @@ tracing = { workspace = true }
 
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml = { workspace = true }
+toml = { workspace = true }
+quickxml_to_serde = { workspace = true }
 flume = { workspace = true }
 base64 = { workspace = true }
 time = { workspace = true }
