--- a/scnr_core/Cargo.toml
+++ b/scnr_core/Cargo.toml
@@ -36,6 +36,13 @@ tar = { workspace = true }
 flate2 = { workspace = true }
 anyhow = { workspace = true }
 
+jaq-core = { workspace = true }
+jaq-std = { workspace = true }
+jaq-interpret = { workspace = true }
+jaq-parse = { workspace = true }
+jaq-syn = { workspace = true }
+
+
 [dev-dependencies]
 scnr_core = { path = ".", features = ["tests_helpers"] }
 pretty_env_logger = { workspace = true }
