py binding tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ resolver = "2"
 
 default-members = ["scnr"]
 
-members = ["scnr", "scnr_core", "scnr_plist", "scnr_sqlite"]
+members = ["scnr", "scnr_core", "scnr_plist", "scnr_sqlite", "py-scnr"]
 
 #  ------------------------------------------------------------------------------------------------------------------
 #  ------------------------------------------------------------------------------------------------------------------
