--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ license = "Apache 2.0"
 #  ------------------------------------------------------------------------------------------------------------------
 
 # Lints will work ... in the futur : https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#lints
-[lints.rust]
+[workspace.lints.rust]
 unsafe_code = "forbid"
 
-[lints.clippy]
+[workspace.lints.clippy]
 missing_errors_doc = "allow"
 
 #  ------------------------------------------------------------------------------------------------------------------
@@ -57,7 +57,7 @@ members = [
 [workspace.dependencies]
 # Misc
 tokio = { version = "1", features = ["full"] }
-once_cell = "1.18"
+once_cell = "1.19"
 thiserror = "1.0"
 anyhow = "1.0"
 tempfile = "3"
@@ -84,19 +84,19 @@ serde_json = { version = "1.0", features = ["preserve_order"] }
 serde_yaml = "0.9"
 toml = { version = "0.8" }
 quick-xml = { version = "0.31", features = ["serialize"] }
-quickxml_to_serde = "0.5"
+quickxml_to_serde = "0.6"
 csv = "1.3"
 plist = "1.6"
 
 # jq
-jaq-core = "1.0"
-jaq-std = "1.0"
-jaq-interpret = "1.1"
+jaq-core = "1.2"
+jaq-std = "1.2"
+jaq-interpret = "1.2"
 jaq-parse = "1.0"
 jaq-syn = "1.1"
 
 # Databases
-rusqlite = { version = "0.30", features = ["bundled"] }
+rusqlite = { version = "0.31", features = ["bundled"] }
 
 # File system
 glob = "0.3"
@@ -110,7 +110,7 @@ tar = "0.4"
 flate2 = "1.0"
 
 # Tests
-insta = { version = "1.34", features = ["yaml"] }
+insta = { version = "1.35", features = ["yaml"] }
 test-case = "3.3"
 pretty_assertions = "1.4"
 
