--- a/scnr/Cargo.toml
+++ b/scnr/Cargo.toml
@@ -12,9 +12,9 @@ description = "All in one super awesome file scanner"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-scnr_core = { path = "../scnr_core" }
-scnr_plist = { path = "../scnr_plist" }
-scnr_sqlite = { path = "../scnr_sqlite" }
+scnr_core = { workspace = true }
+scnr_plist = { workspace = true }
+scnr_sqlite = { workspace = true }
 
 pretty_env_logger = { workspace = true }
 tracing = { workspace = true }
@@ -26,5 +26,5 @@ glob = { workspace = true }
 strum = { workspace = true }
 
 [dev-dependencies]
-scnr_core = { path = "../scnr_core", features = ["tests_helpers"] }
+scnr_core = { workspace = true, features = ["tests_helpers"] }
 pretty_assertions = { workspace = true }
