--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,23 @@ resolver = "2"
 
 default-members = ["scnr"]
 
-members = ["scnr", "scnr_core", "scnr_plist", "scnr_sqlite", "py_scnr"]
+members = [
+  # main cli & higher level (batteries included) lib
+  "scnr",
+
+  # Core system & features 
+  "scnr_core",
+
+  # Plugins
+  "scnr_plist",
+  "scnr_sqlite",
+
+  # Python module
+  "py_scnr",
+
+  # examples
+  "examples/use_as_rust_lib",
+]
 
 #  ------------------------------------------------------------------------------------------------------------------
 #  ------------------------------------------------------------------------------------------------------------------
@@ -50,6 +66,7 @@ members = ["scnr", "scnr_core", "scnr_plist", "scnr_sqlite", "py_scnr"]
 #  ------------------------------------------------------------------------------------------------------------------
 
 [workspace.dependencies]
+scnr = { path = "scnr" }
 scnr_core = { path = "scnr_core" }
 scnr_plist = { path = "scnr_plist" }
 scnr_sqlite = { path = "scnr_sqlite" }
@@ -114,6 +131,15 @@ flate2 = "1.0"
 insta = { version = "1.35", features = ["yaml"] }
 test-case = "3.3"
 pretty_assertions = "1.4"
+
+# Python
+
+# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
+pyo3 = { version = "0.20", features = [
+  "abi3-py38",
+  "extension-module",
+  "anyhow",
+] }
 
 
 #  ------------------------------------------------------------------------------------------------------------------
