--- a/py_scnr/Cargo.toml
+++ b/py_scnr/Cargo.toml
@@ -15,9 +15,13 @@ name = "py_scnr"
 crate-type = ["cdylib"]
 
 [dependencies]
-rand = "0.8.4"
+scnr = { workspace = true }
+scnr_core = { workspace = true }
+scnr_plist = { workspace = true }
+scnr_sqlite = { workspace = true }
 
-[dependencies.pyo3]
-version = "0.20.0"
-# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
-features = ["abi3-py38"]
+pyo3 = { workspace = true }
+thiserror = { workspace = true }
+anyhow = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
