--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,6 +103,7 @@ serde_yaml = "0.9"
 toml = { version = "0.8" }
 quick-xml = { version = "0.31", features = ["serialize"] }
 quickxml_to_serde = "0.6"
+minidom = "0.15"
 csv = "1.3"
 plist = "1.6"
 
