--- a/py_scnr/Cargo.toml
+++ b/py_scnr/Cargo.toml
@@ -20,8 +20,10 @@ scnr_core = { workspace = true }
 scnr_plist = { workspace = true }
 scnr_sqlite = { workspace = true }
 
+pretty_env_logger = { workspace = true }
 pyo3 = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+jaq-core = { workspace = true }
