--- a/py_scnr/Cargo.toml
+++ b/py_scnr/Cargo.toml
@@ -27,3 +27,4 @@ anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 jaq-core = { workspace = true }
+tracing = { workspace = true }
