--- a/examples/use_as_rust_lib/Cargo.toml
+++ b/examples/use_as_rust_lib/Cargo.toml
@@ -10,6 +10,6 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+scnr = { workspace = true }
 
-[lints]
-workspace = true
+anyhow = { workspace = true }
