--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,11 +108,12 @@ csv = "1.3"
 plist = "1.6"
 
 # jq
-jaq-core = "1.4"
-jaq-std = "1.4"
-jaq-interpret = "1.4"
-jaq-parse = "1.0"
-jaq-syn = "1.1"
+jaq-core = "2"
+jaq-json = { version = "1", features = ["serde_json"] }
+jaq-std = "2"
+# jaq-interpret = "1.4"
+# jaq-parse = "1.0"
+# jaq-syn = "1.6"
 
 # Databases
 rusqlite = { version = "0.31", features = ["bundled"] }
