--- a/scnr_core/Cargo.toml
+++ b/scnr_core/Cargo.toml
@@ -38,9 +38,10 @@ anyhow = { workspace = true }
 
 jaq-core = { workspace = true }
 jaq-std = { workspace = true }
-jaq-interpret = { workspace = true }
-jaq-parse = { workspace = true }
-jaq-syn = { workspace = true }
+jaq-json = { workspace = true }
+# jaq-interpret = { workspace = true }
+# jaq-parse = { workspace = true }
+# jaq-syn = { workspace = true }
 
 
 [dev-dependencies]
