--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,6 @@ py_scnr = { path = "py_scnr" }
 
 # Misc
 tokio = { version = "1", features = ["full"] }
-once_cell = "1.19"
 thiserror = "2"
 anyhow = "1.0"
 tempfile = "3"
@@ -105,15 +104,12 @@ quick-xml = { version = "0.37", features = ["serialize"] }
 quickxml_to_serde = "0.6"
 minidom = "0.16"
 csv = "1.3"
-plist = "1.6"
+plist = "=1.6"                                                  # https://github.com/ebarnard/rust-plist/issues/149
 
 # jq
 jaq-core = "2"
 jaq-json = { version = "1", features = ["serde_json"] }
 jaq-std = "2"
-# jaq-interpret = "1.4"
-# jaq-parse = "1.0"
-# jaq-syn = "1.6"
 
 # Databases
 rusqlite = { version = "0.32", features = ["bundled"] }
