--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,7 +98,7 @@ log = "0.4"
 # Serialisation
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
-serde_yaml = "0.9"                                              # F... no more maintained : https://crates.io/crates/serde_yaml, update to https://crates.io/crates/serde_yml ?
+serde_yml = "0.0.12"
 toml = { version = "0.8" }
 quick-xml = { version = "0.37", features = ["serialize"] }
 quickxml_to_serde = "0.6"
