--- a/scnr_core/Cargo.toml
+++ b/scnr_core/Cargo.toml
@@ -18,7 +18,7 @@ tracing = { workspace = true }
 
 serde = { workspace = true }
 serde_json = { workspace = true }
-serde_yaml = { workspace = true }
+serde_yml = { workspace = true }
 toml = { workspace = true }
 quickxml_to_serde = { workspace = true }
 flume = { workspace = true }
