--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,12 +75,11 @@ py_scnr = { path = "py_scnr" }
 
 # Misc
 tokio = { version = "1", features = ["full"] }
-once_cell = "1.19"
-thiserror = "1.0"
-anyhow = "1.0"
+thiserror = "2"
+anyhow = "1"
 tempfile = "3"
 time = { version = "0.3", features = ["formatting", "parsing"] }
-base64 = "0.21"
+base64 = "0.22"
 flume = "0.11"
 clap = { version = "4", features = ["derive", "env"] }
 strum = { version = "0.26", features = ["derive"] }
@@ -99,44 +98,40 @@ log = "0.4"
 # Serialisation
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
-serde_yaml = "0.9"
+serde_yml = "0.0.12"
 toml = { version = "0.8" }
-quick-xml = { version = "0.31", features = ["serialize"] }
+quick-xml = { version = "0.37", features = ["serialize"] }
 quickxml_to_serde = "0.6"
-minidom = "0.15"
+minidom = "0.16"
 csv = "1.3"
-plist = "1.6"
+plist = "=1.6"                                                  # https://github.com/ebarnard/rust-plist/issues/149
 
 # jq
-jaq-core = "1.4"
-jaq-std = "1.4"
-jaq-interpret = "1.4"
-jaq-parse = "1.0"
-jaq-syn = "1.1"
+jaq-core = "2"
+jaq-json = { version = "1", features = ["serde_json"] }
+jaq-std = "2"
 
 # Databases
-rusqlite = { version = "0.31", features = ["bundled"] }
+rusqlite = { version = "0.32", features = ["bundled"] }
 
 # File system
 glob = "0.3"
-globwalk = "0.9"
 walkdir = "2"
 
 # Compression
-zip = "0.6"
+zip = "2.2"
 lzma-rs = "0.3"
 tar = "0.4"
 flate2 = "1.0"
 
 # Tests
-insta = { version = "1.35", features = ["yaml"] }
 test-case = "3.3"
 pretty_assertions = "1.4"
 
 # Python
 
 # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
-pyo3 = { version = "0.20", features = [
+pyo3 = { version = "0.23", features = [
   "abi3-py38",
   "extension-module",
   "anyhow",
