--- a/scnr_core/Cargo.toml
+++ b/scnr_core/Cargo.toml
@@ -18,7 +18,7 @@ tracing = { workspace = true }
 
 serde = { workspace = true }
 serde_json = { workspace = true }
-serde_yaml = { workspace = true }
+serde_yml = { workspace = true }
 toml = { workspace = true }
 quickxml_to_serde = { workspace = true }
 flume = { workspace = true }
@@ -26,7 +26,6 @@ base64 = { workspace = true }
 time = { workspace = true }
 
 walkdir = { workspace = true }
-globwalk = { workspace = true }
 glob = { workspace = true }
 
 bytes = { workspace = true }
@@ -38,9 +37,7 @@ anyhow = { workspace = true }
 
 jaq-core = { workspace = true }
 jaq-std = { workspace = true }
-jaq-interpret = { workspace = true }
-jaq-parse = { workspace = true }
-jaq-syn = { workspace = true }
+jaq-json = { workspace = true }
 
 
 [dev-dependencies]
